# C-napse

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
cli/: package-lock.json  package.json  tsconfig.json
cli/src/: index.tsx
cli/src/agents/: autonomous.ts  coder.ts  computer.ts  executor.ts  filer.ts  index.ts  learner.ts  router.ts  shell.ts  types.ts
cli/src/components/: App.tsx  ChatInput.tsx  ChatMessage.tsx  ConfigUI.tsx  Header.tsx  HelpMenu.tsx  ProviderSelector.tsx  Setup.tsx  StatusBar.tsx  TaskProgress.tsx
cli/src/hooks/: index.ts  useChat.ts  useTasks.ts  useTelegram.ts  useVision.ts
cli/src/lib/: api.ts  config.ts  keyboard.ts  ollama.ts  screen.ts  system.ts  tasks.ts  vision.ts
cli/src/services/: browser.ts  screen-monitor.ts  telegram.ts
cli/src/tools/: clipboard.ts  computer.ts  filesystem.ts  index.ts  network.ts  process.ts  shell.ts  vision.ts
cli/src/types/: screenshot-desktop.d.ts
docs/: Dockerfile  agents.html  api.html  architecture.html  configuration.html  docs.html  index.html  package.json  quickstart.html  status.html  styles.css  tools.html
scripts/: install.ps1  install.sh
src/: error.rs  lib.rs  main.rs
src/agents/: app.rs  coder.rs  filer.rs  memory.rs  mod.rs  router.rs  shell.rs  traits.rs
src/cli/: mod.rs  ui.rs
src/cli/commands/: app.rs  auth.rs  config.rs  init.rs  mod.rs  models.rs  repl.rs  run.rs  serve.rs  sync.rs  telegram.rs
src/config/: credentials.rs  mod.rs  paths.rs  settings.rs
src/inference/: anthropic.rs  backend.rs  local.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
src/memory/: context.rs  embeddings.rs  mod.rs  store.rs
src/server/: api.rs  apps.rs  auth.rs  mod.rs  websocket.rs
src/server/templates/: apps.html  index.html
src/sync/: mod.rs  phone.rs  vscode.rs
src/telegram/: bot.rs  commands.rs  handlers.rs  mod.rs
src/tools/: clipboard.rs  filesystem.rs  mod.rs  network.rs  process.rs  screenshot.rs  shell.rs
src/tui/: app.rs  events.rs  mod.rs  screen_watcher.rs  tools_executor.rs  ui.rs
