[package]
name = "cnapse"
version = "0.1.0"
edition = "2021"
authors = ["C-napse Contributors"]
description = "Agentic CLI for your PC - small models, fast signals"
license = "MIT"
repository = "https://github.com/yourusername/cnapse"
keywords = ["cli", "ai", "agents", "automation", "llm"]
categories = ["command-line-utilities"]
default-run = "cnapse"

[[bin]]
name = "cnapse"
path = "src/main.rs"

[[bin]]
name = "cn"
path = "src/main.rs"

[[bin]]
name = "c"
path = "src/main.rs"

[dependencies]
# CLI Framework
clap = { version = "4", features = ["derive", "env", "cargo"] }
clap_complete = "4"

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP Client & Server
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart", "stream"], default-features = false }
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# WebSocket
tokio-tungstenite = "0.21"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Telegram Bot
teloxide = { version = "0.12", features = ["macros"] }

# Utilities
anyhow = "1"
thiserror = "1"
dirs = "5"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = { version = "0.17", features = ["tokio"] }
console = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
secrecy = { version = "0.8", features = ["serde"] }
sha2 = "0.10"
base64 = "0.22"
url = "2"
regex = "1"
once_cell = "1"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# System Info
sysinfo = "0.30"
hostname = "0.4"
local-ip-address = "0.6"

# Clipboard
arboard = "3"

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Screenshots (optional)
screenshots = "0.8"
image = { version = "0.24", default-features = false, features = ["png"] }

# Embeddings (optional - requires ONNX runtime)
# Note: fastembed manages its own ort dependency
fastembed = { version = "4", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["shellapi", "winuser"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["process", "signal"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
mockall = "0.12"
tokio-test = "0.4"

[features]
default = ["local-inference", "screenshots"]
local-inference = []
screenshots = []
embeddings = ["fastembed"]
cuda = []
metal = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-debug]
inherits = "release"
debug = true
strip = false
